--- a/lessons/css-basics/inline-vs-block.html
+++ b/lessons/css-basics/inline-vs-block.html
@@ -5,10 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline vs Block Examples</title>
+    <style>
+        .outline-box{
+            outline: 3px solid red;
+        }
+    </style>
+    <link rel="stylesheet" href="inline-vs-block.css"/>
 </head>
 <body>
     <section>
         <!-- Block elements -->
+        <h2>Block elements</h2>
+        <!-- If you find yourself repeating styling code you need to make it a class -->
+        <!-- 
+            Example of inline styling
+            <p style="outline: 3px solid red">This is a paragraph block</p>
+         -->
+        <p class="outline-box">This is a paragraph block</p>
+        <p class="outline-box">This is a paragraph block</p>
+        <ul>
+            <li>Block level elements always start a new line</li>
+            <li>It will take up entire width of the parent</li>
+        </ul>
+    </section>
+    <section>
+        <!-- Inline elements -->
+        <hr>
+        <h2>Inline elements</h2>
+        <ul>
+            <li>An inline element does not start a new line</li>
+            <li>An inline element only takes up as much width as necessary</li>
+        </ul>
+        <p>The very President of the United States was <a href="#"class="outline-box">George Washington</a></p>
+
+        <h3>Common Tags that are inline</h3>
+        <ul>
+            <li>span</li>
+            <li>strong - this is an example of <strong>STRONG</strong> tags</li>
+            <li>em</li>
+            <li>i tags</li>
+        </ul>
+    </section>
+    <section>
+        <!-- Inline Block -->
+        <hr>
+        <h2>Inline block</h2>
+        <div>
+            <a class="outline-box" href="#">Submit</a>
+            <a href="#">Clear</a>
+        </div>
+        <a href="#">Outside the DIV</a>
     </section>      
 </body>
 </html>
