--- a/challenges/two_truths_and_lie/index.html
+++ b/challenges/two_truths_and_lie/index.html
@@ -18,16 +18,16 @@
     <div class="bigbox">
       <h1>Two Truths and a Lie</h1>
       <div class="outline-box">
-        <h3>I hate olives</h3>
-        <p>Truth. I hate their taste.</p>
+        <h3>I don't eat olives</h3>
+        <p>They taste weird to me</p>
       </div>
       <div class="outline-box">
-        <h3>I love history movies</h3>
-        <p>Truth. Everything history related fascinates me.</p>
+        <h3>History is my biggest passion.</h3>
+        <p>History movies are my favorite movie genre.</p>
       </div>
       <div class="outline-box">
         <h3>My dog is very well trained</h3>
-        <p>Lie. I don't have a dog.</p>
+        <p>He can be unleashed everywhere</p>
       </div>  
     </div> 
   </body>
