--- a/challenges/frozen-noodle/index.html
+++ b/challenges/frozen-noodle/index.html
@@ -7,7 +7,7 @@
     <title>Frozen Noodle</title>
     <link rel="stylesheet" href="index.css"/>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Arvo&display=swap');
+        @import url("https://fonts.googleapis.com/css2?family=Antonio:wght@600&display=swap");
         </style>
 </head>
 <body>
@@ -16,6 +16,7 @@
     <div class="header-text-group">
         <h1 class="header-text">Frozen</h1>
         <h1 class="header-text">Noodle</h1>
+        <button class="btn-primary btn-lg btn-100">JOIN NEWSLETTER</button>
     </div>
     <!-- Image Column -->
     <div>
@@ -25,5 +26,28 @@
     </div>
 </div>
     <!-- Product -->
+    <div class="wrapper-food-display">
+        <div class="food-display">
+            <h2>Noodle Rama</h2>
+            <img src="https://picsum.photos/400" alt="Food Item">
+            <h3>$24.00</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae ullam vel repellat, aliquam aspernatur animi eveniet excepturi autem rem.</p>
+            <button class="btn btn-primary btn-100">Add to Cart</button>
+            </div>
+        <div class="food-display">
+            <h2>Noodle Rama</h2>
+            <img src="https://picsum.photos/500" alt="Food Item">
+            <h3>$24.00</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae ullam vel repellat, aliquam aspernatur animi eveniet excepturi autem rem.</p>
+            <button class="btn btn-primary btn-100">Add to Cart</button>
+            </div>
+        <div class="food-display">
+            <h2>Noodle Rama</h2>
+            <img src="https://picsum.photos/600" alt="Food Item">
+            <h3>$24.00</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur vitae ullam vel repellat, aliquam aspernatur animi eveniet excepturi autem rem.</p>
+            <button class="btn btn-primary btn-100">Add to Cart</button>
+            </div> 
+    </div>
 </body>
 </html>
