--- a/challenges/image-gallery/index.html
+++ b/challenges/image-gallery/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
-    <link rel="stylesheet" href="sdb-nov-2022/unit-1/challenges/image-gallery/styles/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="header">Image Gallery</div>
-        <div id="navbar">
+        <div class="navbar">
             <a href="link-1">Link-1</a> </li> 
             <a href="link-2">Link-2</a> </li>
             <a href="link-3">Link-3</a> </li>
